@@ -7,6 +7,7 @@
     <string id="30006">LIVE recordings</string>
     <string id="30007">LIVE</string>
     <string id="30008">Next</string>
+    <string id="30009">Shows</string>
     <!-- settings -->
     <string id="30002">General</string>
     <string id="30003">Portal</string>
