@@ -7,6 +7,7 @@
     <string id="30006">Ülekannete salvestused</string>
     <string id="30007">Ülekanded</string>
     <string id="30008">Järgmised</string>
+    <string id="30009">Saated</string>
     <!-- seaded -->
     <string id="30002">Üldine</string>
     <string id="30003">Portaal</string>
