@@ -1,3 +1,5 @@
+[B]Version 0.0.12[/B]
+- new category Shows / uus kategooria Saated
 [B]Version 0.0.11[/B]
 - fix live streaming / otseülekannete aadresside leidmise parandus
 [B]Version 0.0.10[/B]
